# Example_GoogleTest

./: CMakeLists.txt  Makefile
Project/lib/: ExampleGoogleTest.hpp
Project/src/: ExampleGoogleTest.cpp
test/: Tester.cpp
